# 3D_ViewerCPP

./: .gitmodules  CMakeLists.txt  README.md
src/: Makefile  controller.cpp  controller.h  main.cpp  model.cpp  model.h  view.cpp  view.h
src/bash/: converter.sh  gif_converter.sh
src/config/: config.conf
src/shaders/: fragment_shader.frag  points.frag  vertex_point.vert  vertex_shader.vert
